{
  "version": 4,
  "terraform_version": "1.10.0",
  "serial": 201,
  "lineage": "6c656f50-416f-6c1b-a7dd-0375cc87de84",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/extNsg",
            "location": "canadacentral",
            "name": "extNsg",
            "resource_group_name": "sh-Overwatch",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "443",
                  "514",
                  "80"
                ],
                "direction": "Inbound",
                "name": "AllowTagWebAndSyslogInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/intNsg",
            "location": "canadacentral",
            "name": "intNsg",
            "resource_group_name": "sh-Overwatch",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_network_security_group",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/mgmtNsg",
            "location": "canadacentral",
            "name": "mgmtNsg",
            "resource_group_name": "sh-Overwatch",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMyIpAddressSSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "174.113.5.85",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowMyIpAddressAnyInbound",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "174.113.5.85",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.127.252.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/virtualNetworks/Overwatch-subnet/subnets/external-subnet",
            "name": "external-subnet",
            "network_security_group_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/extNsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sh-Overwatch",
            "virtual_network_name": "Overwatch-subnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.127.253.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/virtualNetworks/Overwatch-subnet/subnets/internal-subnet",
            "name": "internal-subnet",
            "network_security_group_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/intNsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sh-Overwatch",
            "virtual_network_name": "Overwatch-subnet"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.127.254.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/virtualNetworks/Overwatch-subnet/subnets/mgmt-subnet",
            "name": "mgmt-subnet",
            "network_security_group_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/networkSecurityGroups/mgmtNsg",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "sh-Overwatch",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "Overwatch-subnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/frontendIPConfigurations/LoadBalancerFrontEnd",
                "load_balancer_rules": [
                  "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/loadBalancingRules/LBRule1"
                ],
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/publicIPAddresses/Sentinal-lb-pip-c025"
              }
            ],
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025",
            "location": "canadacentral",
            "name": "Sentinal-lb-c025",
            "resource_group_name": "sh-Overwatch",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "s.hillier@f5.com"
            }
          },
          "dependencies": [
            "azurerm_public_ip.lbpip",
            "data.azurerm_resource_group.main",
            "random_id.buildSuffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/backendAddressPools/BackendPool1",
            "load_balancing_rules": [
              "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/loadBalancingRules/LBRule1"
            ],
            "loadbalancer_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025",
            "name": "BackendPool1"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "data.azurerm_resource_group.main",
            "random_id.buildSuffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/probes/tcpProbe",
            "interval_in_seconds": 5,
            "load_balancer_rules": [
              "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/loadBalancingRules/LBRule1"
            ],
            "loadbalancer_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025",
            "name": "tcpProbe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_public_ip.lbpip",
            "data.azurerm_resource_group.main",
            "random_id.buildSuffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/backendAddressPools/BackendPool1"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/loadBalancingRules/LBRule1",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025",
            "name": "LBRule1",
            "probe_id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/loadBalancers/Sentinal-lb-c025/probes/tcpProbe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.lbpip",
            "data.azurerm_resource_group.main",
            "random_id.buildSuffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "overwatch-lbpip",
            "fqdn": "overwatch-lbpip.canadacentral.cloudapp.azure.com",
            "id": "/subscriptions/b9922b70-7518-4b04-bf9d-3aabbca45b0a/resourceGroups/sh-Overwatch/providers/Microsoft.Network/publicIPAddresses/Sentinal-lb-pip-c025",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.156.22.174",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "Sentinal-lb-pip-c025",
            "resource_group_name": "sh-Overwatch",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "owner": "s.hillier@f5.com"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main",
            "random_id.buildSuffix"
          ]
        }
      ]
    }
  ]
}